<resources>
    <string name="app_name">Dashboard Islami</string>
    <string name="welcome">welcome</string>
    <string name="assalamualaikum_fulan">Assalamualaikum, Fulan</string>
    <string name="doa">Doa</string>
    <string name="zakat">Zakat</string>
    <string name="dzikir">Dzikir</string>
    <string name="doaa">Doa</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="kajian">Kajian</string>
    <string name="inspiration">Inspiration</string>
    <string name="rumah">Rumah</string>
    <string name="makanan_dan_minuman">Makanan dan Minuman</string>
    <string name="pagi_dan_malam">Pagi dan Malam</string>
    <string name="perjalanan">Perjalanan</string>
    <string name="pagi_amp_malam">Pagi &amp; Malam</string>
    <string name="sholat">Sholat</string>
    <string name="etika_baik">Etika Baik</string>
    <string name="doa_makanan_dan_minuman">Doa Makanan dan Minuman</string>
    <string name="rp_1_087_000">Rp. 1.087.000</string>
    <string name="_1_gram">1 Gram</string>
    <string name="rp_92_395_000">Rp. 92.395.000</string>
    <string name="_85_gram">85 Gram</string>
    <string name="txt_deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="subuh">Subuh</string>
    <string name="hitung">hitung</string>
    <string name="total_harta_keseluruhan">Total Harta Keseluruhan</string>
    <string name="status">status</string>
    <string name="wajib">wajib</string>
    <string name="zakat_yang_dikeluarkan">zakat yang dikeluarkan</string>
    <string name="harga_emas_16_oktober_2023">Harga Emas 16 Oktober 2023</string>
</resources>