<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_header_dashboard_morning" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_rounded_text_view"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/assalamualaikum_fulan"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subuh"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_regular"
                    android:id="@+id/tv_waktu_sholat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="04:00"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:text="Ngargoyoso"
                    android:layout_gravity="center"/>


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_header"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_rounded_menu"
                android:id="@+id/horizontal_scroll_menu">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/btn_doa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_menu_doa" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/doaa"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_zikir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_menu_dzikir" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/dzikir"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_zakat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_menu_zakat" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/zakat"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:id="@+id/btn_jadwalsholat">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_menu_jadwal_sholat"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/jadwal_sholat"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/btn_kajian">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_menu_video_kajian"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/kajian"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inspiration"
                android:padding="10dp"
                android:layout_below="@id/horizontal_scroll_menu"
                android:textColor="@color/colorText"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:id="@+id/tv_inspiration"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_inspiration"
                android:layout_below="@id/tv_inspiration"
                tools:listitem="@layout/item_row_inspiraition"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>