<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doa.DoaActivity">

    <ImageView
        android:id="@+id/img_doa"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_header_doa" />

    <LinearLayout
        android:id="@+id/ll_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_doa"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/card_doa_pagi_malam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_pagi_malam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="@string/pagi_amp_malam"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_doa_rumah"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_rumah" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="@string/rumah"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_makanan_minuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_makanan_minuman" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="Makanan &amp; Minuman"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_pertama"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_doa_perjalanan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_perjalanan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="@string/perjalanan"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sholat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_sholat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="@string/sholat"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_etika_baik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            android:layout_marginVertical="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_doa_etika_baik" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:maxLines="2"
                    android:text="@string/etika_baik"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>
